don't allow sharding admin db SERVER-2086